Attempt to fix the yapudjus' desc overflow on mobile

--- a/index.css
+++ b/index.css
@@ -299,6 +299,7 @@ p {
 .buddiesPP {
 	flex-basis: calc(100% / 8);
 	text-align: center;
+	overflow-wrap: anywhere;
 }
 
 .buddiesPP p {
